--- a/client/.env
+++ b/client/.env
@@ -1,6 +1,6 @@
 VITE_CLOUDINARY_CLOUD_NAME=dng6erbmx
 VITE_CLOUDINARY_UPLOAD_PRESET=shushastho
 VITE_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/dng6erbmx/image/upload
-VITE_CHAT_API=http://127.0.0.1:5000/get_diseases
+# VITE_CHAT_API=http://127.0.0.1:5000/get_diseases     
 
 
